--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
-  <script src="./main.js"></script>
+  <script src="./main.js" defer></script>
 </head>
 <body>
   <div>
@@ -12,16 +12,22 @@
     <p>The rules are simple, taking turns click on a square. You can't click on a square someone has already filled in. If you can get 3 squares in a row your colour, you win.</p>
   </div>
   <div class="gameBox">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+    <div class="box4"></div>
+    <div class="box5"></div>
+    <div class="box6"></div>
+    <div class="box7"></div>
+    <div class="box8"></div>
+    <div class="box9"></div>
   </div>
-  
+  <div>
+    <h2>Select your player colour and make a move</h2>
+    <div class='buttons'>
+      <button>Red player</button>
+      <button>Green player</button>
+    </div>
+  </div>
 </body>
 </html>
