html class and css updates

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <script src="./main.js" defer></script>
 </head>
 <body>
-  <div>
+  <div class=topRules>
     <h1>Tic Tac Toe</h1>
     <p>Would you like to play a game? Do you want that game to be Tic Tac Toe? Do you have a friend, family member, imaginary friend or kidnap victim who will play with you? Great, because if you don't, whis is not the page for you!</p>
     <p>The rules are simple, taking turns click on a square. You can't click on a square someone has already filled in. If you can get 3 squares in a row your colour, you win.</p>
   </div>
   <div>
+    <p>Please start by entering the player's names below;</p>
     <input type="text" placeholder="Player 1's name" id="playerOneName">
     <input type="text" placeholder="Player 2's name" id="playerTwoName">
-    <button id='generateStartPlayer'>Click here to find whose going first</button>
+    <button id='generateStartPlayer'>Then click here to find out who is going first</button>
     <p>The first player is :</p>
     <p id="startPlayer"></p>
   </div>
