--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <div class=topRules>
     <h1>Tic Tac Toe</h1>
     <p>Would you like to play a game? Do you want that game to be Tic Tac Toe? Do you have a friend, family member, imaginary friend or kidnap victim who will play with you? Great, because if you don't, whis is not the page for you!</p>
-    <p>The rules are simple, taking turns click on a square. You can't click on a square someone has already filled in. If you can get 3 squares in a row your colour, you win.</p>
+    <p>Rules:taking turns click on a square. You can't click on a square someone has already filled in. If you can get 3 squares in a line of your colour, you win.</p>
   </div>
   <div>
-    <p>Please start by entering the player's names below;</p>
+    <p>Enter the player's names below;</p>
     <input type="text" placeholder="Player 1's name" id="playerOneName">
     <input type="text" placeholder="Player 2's name" id="playerTwoName">
-    <button id='generateStartPlayer'>Then click here to find out who is going first</button>
+    <button id='generateStartPlayer'>Click to find out who goes first</button>
     <p>The first player is :</p>
     <p id="startPlayer"></p>
   </div>
-  <div class="gameBox">
+  <div class="gameboard">
     <div id="box1"></div>
     <div id="box2"></div>
     <div id="box3"></div>
@@ -29,14 +29,6 @@
     <div id="box7"></div>
     <div id="box8"></div>
     <div id="box9"></div>
-  </div>
-  <div>
-    <h2>Select your player colour and make a move</h2>
-    <h3></h3>
-    <div class='buttons'>
-      <button id="playerOne">Player One - Red</button>
-      <button id="playerTwo">Player Two - Green</button>
-    </div>
   </div>
 </body>
 </html>
