scoring working, need to figure out game over and why x is looping at the end

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <p id="startPlayer"></p>
   </div>
   <div class="gameboard">
-    <div id="box1"></div>
-    <div id="box2"></div>
-    <div id="box3"></div>
-    <div id="box4"></div>
-    <div id="box5"></div>
-    <div id="box6"></div>
-    <div id="box7"></div>
-    <div id="box8"></div>
-    <div id="box9"></div>
+    <div class="gameCell" id="box1"></div>
+    <div class="gameCell" id="box2"></div>
+    <div class="gameCell" id="box3"></div>
+    <div class="gameCell" id="box4"></div>
+    <div class="gameCell" id="box5"></div>
+    <div class="gameCell" id="box6"></div>
+    <div class="gameCell" id="box7"></div>
+    <div class="gameCell" id="box8"></div>
+    <div class="gameCell" id="box9"></div>
   </div>
 </body>
 </html>
