--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
     <div class="gameCell" id="box8"></div>
     <div class="gameCell" id="box9"></div>
   </div>
+  <div>
+    <p id="winnerDisplay"></p>
+  </div>
 </body>
 </html>
